--- a/src/assets/styles/VerLugares.css
+++ b/src/assets/styles/VerLugares.css
@@ -1,4 +1,4 @@
-.Container{
+  .Container{
     display: grid;
     grid-template-columns:repeat(auto-fit,minmax(300px,1fr)) ;
     gap: 5px,5px;
@@ -15,4 +15,12 @@
   .Card:hover {
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
+  .Search{
+    margin: 15px 40px;
+  }
+  .Volver{
+    max-width: 200px;
+    margin: 10px;
+    margin-bottom: 0px;
   }
