cambio de diseño, solucion de errores de imagenes, ventanas de tutoriales e implementacion de camara con deteccion de formas

--- a/src/assets/styles/LoginForm.css
+++ b/src/assets/styles/LoginForm.css
@@ -14,13 +14,15 @@
 }
 
 .login-page .login-container {
-  background: #fff;
+  background: #435a6d;
+  color: #ffffff;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 400px;
-  margin-top: 90px;
+  margin-top: 40px;
+  text-align:center;
 }
 
 .login-page .nav-pills .nav-link.active {
