confirmacion de seguridad

--- a/src/assets/styles/MenuRutas.css
+++ b/src/assets/styles/MenuRutas.css
@@ -6,7 +6,11 @@
     background-color: transparent !important;
   }
   
-
+  .floating-select:focus {
+    border: none !important;
+    box-shadow: none !important;
+    outline: none !important;
+  }
 
   .form-select:focus {
     border: none !important;
