solucion de errores en la camara e implementacion de componente botones

--- a/src/assets/styles/WebCamCapture.css
+++ b/src/assets/styles/WebCamCapture.css
@@ -38,3 +38,8 @@
     align-items: center;
     gap: 8px;
   }
+  .VolverBtn{
+    max-width: 200px;
+    margin: 10px;
+    margin-bottom: 0px;
+  }
